[tool.poetry]
name = "ghtopdep-slessback"
version = "0.1.0"
description = ""
authors = ["Andriy Orehov <andriyorehov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
chalice = "^1.12.0"
pymongo = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
